--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Nunito Sans", sans-serif;
+}
+.container {
+  max-width: 1180px;
+  padding-inline: 20px;
+}
