--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,4 +8,28 @@ body {
 .container {
   max-width: 1180px;
   padding-inline: 20px;
+  margin-inline: auto;
+}
+
+/* loader */
+.loader {
+  margin: 4.8rem auto;
+  width: 2.4rem;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: radial-gradient(farthest-side, #4f46e5 94%, #0000) top/8px 8px
+      no-repeat,
+    conic-gradient(#0000 30%, #4f46e5);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: rotate 1.5s infinite linear;
+}
+@keyframes rotate {
+  to {
+    transform: rotate(1turn);
+  }
+}
+.list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+  gap: 2rem;
 }
