RCS-3 initialize i18n & translate all static data and translate the country name

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,7 @@
 /* Common styles */
 body {
   font-family: "Nunito Sans", sans-serif;
+  direction: rtl;
 }
 *:disabled {
   cursor: not-allowed;
