refactor change light mode color fix some styles in the app

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,19 +20,9 @@ body {
   cursor: not-allowed;
 }
 .container {
-  max-width: 1180px;
+  max-width: 1440px;
   padding-inline: 20px;
   margin-inline: auto;
-}
-.list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-  gap: 2rem;
-}
-@layer components {
-  .bold {
-    @apply font-bold;
-  }
 }
 
 /* Loader Styles*/
@@ -52,6 +42,18 @@ body {
     transform: rotate(1turn);
   }
 }
+/* Start Input Styles */
+
+.ant-input-affix-wrapper.ant-input-outlined.css-dev-only-do-not-override-zg0ahe {
+  border: none;
+  outline: 0;
+  outline-offset: 0;
+}
+
+.ant-input.css-dev-only-do-not-override-zg0ahe::placeholder {
+  color: var(--white);
+}
+/* End Input Styles */
 
 /* Button Styles  */
 .ant-btn.ant-btn-default.css-dev-only-do-not-override-zg0ahe {
